Fix spacing between cards

--- a/web/src/scss/main.scss
+++ b/web/src/scss/main.scss
@@ -238,7 +238,7 @@ footer{
         overflow: hidden;
     }
     header {
-        height: 51px;
+        height: 61px;
         padding: 0px;
     }
     section {
@@ -264,7 +264,7 @@ footer{
     #menu {
         position: absolute;
         left: 40px;
-        top: 26px;
+        top: 23px;
     }
     .sidebar {
         width: 100%;
